# DRIFT

./: README.md  setup.py
documentation/: README.md
harnesses/mavlink/: LICENSE.md  README.md  setup.sh
harnesses/mavlink/src/: .parser_with_random_message.cpp.swp  CMakeLists.txt  parser_with_assembled_message.cpp  parser_with_random_message.cpp  single_byte_harness.cpp
resources/cliUI/: app.py  start.sh
resources/cliUI/examples/: mavlink_afl.sh
resources/cliUI/examples/work/: fuzzer-master.cmd
resources/cliUI/fuzzer/: engine.py
resources/webUI/: app.py  start.sh
resources/webUI/examples/: custom.sh  example-elf  mavlink_afl.sh
resources/webUI/examples/work/: fuzzer-master.cmd
resources/webUI/fuzzer/: engine.py
resources/webUI/templates/: contents_main.html
src/drift/: __init__.py  __main__.py  cli.py  container.py  drift.py  logger.py  overwatch.py  web.py
src/drift-ci/: Dockerfile  README.md  run.sh
src/drift-ci/arena/: setup.sh  startup.sh
src/drift-ci/overwatch/: README.md  overwatch.py
